--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,9 +13,10 @@ services:
 
   django:
     build:
-      context: ./demo_server/portacode_django
+      context: ./server/portacode_django
       dockerfile: Dockerfile
     container_name: portacode-django
+    restart: unless-stopped
     command: ["daphne", "portacode_django.asgi:application", "-b", "0.0.0.0", "-p", "8001"]
     env_file:
       - main.env
@@ -24,11 +25,11 @@ services:
     ports:
       - "8001:8001"
     volumes:
-      - ./demo_server/portacode_django:/app
+      - ./server/portacode_django:/app
 
   portacode-gateway:
     build:
-      context: ./demo_server
+      context: ./server
       dockerfile: Dockerfile
     container_name: portacode-gateway
     restart: unless-stopped
@@ -39,7 +40,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./demo_server:/app
+      - ./server:/app
 
   redis:
     image: redis:7-alpine
