improve test framework

--- a/testing_framework/.env.example
+++ b/testing_framework/.env.example
@@ -15,4 +15,4 @@ TEST_HEADLESS=false    # true for headless mode, false for visible browser
 # Optional: Test Output Directories
 TEST_RESULTS_DIR=test_results
 TEST_RECORDINGS_DIR=test_recordings
-TEST_LOGS_DIR=test_logs
+TEST_LOGS_DIR=test_results
