add docker services for workers

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,35 @@ services:
     volumes:
       - ./server/portacode_django:/app
 
+  unibot-worker:
+    build:
+      context: ./server/portacode_django
+      dockerfile: Dockerfile
+    container_name: portacode-unibot-worker
+    restart: unless-stopped
+    command: ["python", "manage.py", "run_worker"]
+    env_file:
+      - main.env
+    depends_on:
+      db:
+        condition: service_healthy
+    volumes:
+      - ./server/portacode_django:/app
+
+  imap-worker:
+    build:
+      context: ./server/portacode_django
+      dockerfile: Dockerfile
+    container_name: portacode-imap-worker
+    restart: unless-stopped
+    command: ["python", "manage.py", "start_imap_listeners"]
+    env_file:
+      - main.env
+    depends_on:
+      db:
+        condition: service_healthy
+    volumes:
+      - ./server/portacode_django:/app
 
 volumes:
   pgdata: 
