--- a/testing_framework/.env.example
+++ b/testing_framework/.env.example
@@ -16,3 +16,6 @@ TEST_HEADLESS=false    # true for headless mode, false for visible browser
 TEST_RESULTS_DIR=test_results
 TEST_RECORDINGS_DIR=test_recordings
 TEST_LOGS_DIR=test_results
+
+# Automation testing token (used by the testing framework to bypass captcha. Same token must be defined in ../main.env)
+TEST_RUNNER_BYPASS_TOKEN=same-as-in-main-env
