--- a/examples/workshop_fleet/Dockerfile
+++ b/examples/workshop_fleet/Dockerfile
@@ -5,7 +5,12 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends git \
     && rm -rf /var/lib/apt/lists/*
 
-RUN pip install --no-cache-dir portacode===1.3.39
+# Pre-copy requirements so Django dependencies install during the image build
+COPY initial_content/requirements.txt /tmp/workshop_requirements.txt
+
+RUN pip install --no-cache-dir portacode \
+    && pip install --no-cache-dir -r /tmp/workshop_requirements.txt \
+    && rm -f /tmp/workshop_requirements.txt
 
 # Bake the instructor-provided starter code into the image
 COPY initial_content/ /opt/initial_content/
