--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
       dockerfile: Dockerfile
     container_name: portacode-django
     restart: unless-stopped
-    command: ["bash", "-c", "python manage.py migrate && python manage.py collectstatic --noinput && uvicorn portacode_django.asgi:application --host 0.0.0.0 --port 8001"]
+    command: ["bash", "-c", "rm -rf staticfiles && python manage.py migrate && python manage.py collectstatic --noinput && uvicorn portacode_django.asgi:application --host 0.0.0.0 --port 8001"]
     env_file:
       - main.env
     depends_on:
