intercept link-opening actions in PTY sessions

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,4 @@ prune server
 exclude .pypirc
 recursive-include portacode/static *.js *.html
 recursive-include examples *
+recursive-include portacode/link_capture *
